LIB-421 Fix pagination links on narrow width layouts

--- a/custom/modules/eresources/css/eresources.css
+++ b/custom/modules/eresources/css/eresources.css
@@ -49,3 +49,7 @@ ul.list-bullets li.d-flex:before {
 .list-results .coverage {
   font-weight: 600;
 }
+
+#search_results_wrapper .pagination {
+  flex-wrap: wrap;
+}
